[gd_scene load_steps=11 format=3 uid="uid://jdt8vpo4ias0"]

[ext_resource type="Script" uid="uid://cx10v2cj0puy5" path="res://scenes/player/player.gd" id="1_8afob"]
[ext_resource type="Script" uid="uid://d4ahqcstlxots" path="res://scenes/player/fps_meter.gd" id="2_gmlin"]
[ext_resource type="Script" uid="uid://dcjdq4q7tkv14" path="res://scenes/player/crosshair.gd" id="3_gmlin"]

[sub_resource type="Animation" id="Animation_lvxji"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_dovo2"]
resource_name = "jump"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.100045, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0401152, -0.000891907, 0.0222359), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gmlin"]
resource_name = "land"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0505098, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvxji"]
_data = {
&"RESET": SubResource("Animation_lvxji"),
&"jump": SubResource("Animation_dovo2"),
&"land": SubResource("Animation_gmlin")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x7p2l"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gmlin"]
height = 1.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8afob"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_8afob")

[node name="headpivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="head" type="Node3D" parent="headpivot"]

[node name="Camera" type="Camera3D" parent="headpivot/head"]
unique_name_in_owner = true

[node name="cam_animation" type="AnimationPlayer" parent="headpivot/head"]
libraries = {
&"": SubResource("AnimationLibrary_lvxji")
}

[node name="standing_coll" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_x7p2l")

[node name="crouching_coll" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
shape = SubResource("CapsuleShape3D_gmlin")

[node name="ceiling_detector" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_8afob")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="debug" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 74.0

[node name="MarginContainer" type="MarginContainer" parent="HUD/debug"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/debug/MarginContainer"]
layout_mode = 2

[node name="fps" type="Label" parent="HUD/debug/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_gmlin")

[node name="velocity" type="Label" parent="HUD/debug/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
visible_characters = 24

[node name="slide_timer" type="Label" parent="HUD/debug/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="slide_speed" type="Label" parent="HUD/debug/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="g_normal" type="Label" parent="HUD/debug/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="crosshair" type="CenterContainer" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_gmlin")
dot_radius = 2.0
dot_outline_radius = 3.1

[node name="ground_normal" type="RayCast3D" parent="."]
target_position = Vector3(0, -0.5, 0)
